replace toList